# HarbourCraneHelper

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
ControlInterface/: CMakeLists.txt  NonClassicLogic.sln
ControlInterface/NonClassicLogic/: Expert.cs  Form1.Designer.cs  Form1.cs  FuzzyGraph.cs  FuzzyLogic.cs  Geometry.cs  NonClassicLogic.csproj  OuterWorld.cs
ControlInterface/src/: main.cpp
ExpertSystem/: CMakeLists.txt
ExpertSystem/include/: expertsystem.h
ExpertSystem/src/: expertsystem.cpp
NonClassicLogic/: Expert.cs  Form1.Designer.cs  Form1.cs  FuzzyLogic.cs  Geometry.cs  OuterWorld.cs  Program.cs
NonClassicLogic/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
OuterWorld/: CMakeLists.txt
OuterWorld/include/: outerworld.h
OuterWorld/src/: outerworld.cpp
Skorohod/: Skorohod.sln
Skorohod/Skorohod/: FuzzyGraph.cs  FuzzyLogic.cs  Geometry.cs  Program.cs  Skorohod.csproj
Skorohod/Skorohod/Properties/: AssemblyInfo.cs
